docs/versioned_docs/version-3.9.9/guides/navigation.mdx
---
title: React Navigation
description: Navigate to other screens from within the bottom sheet.
keywords: [bottom sheet navigation, react-navigation, navigating from sheet, sheet navigator]
---

import navigation from './assets/navigation.gif'

TrueSheet integrates with React Navigation out of the box. It just works!

<img alt="navigation" src={navigation} width="300"/>

## How?

You can use the [Sheet Navigator](#sheet-navigator) to present screens as sheets, or simply [navigate from within sheets](#navigating-from-sheets) using your existing navigation setup.

## Sheet Navigator

TrueSheet provides a custom navigator for React Navigation. The first screen (or `initialRouteName`) is the base content, while other screens are presented as sheets.

```bash
npm install @react-navigation/native
```

### Basic Usage

```tsx
import { NavigationContainer } from '@react-navigation/native';
import {
  createTrueSheetNavigator,
  useTrueSheetNavigation,
} from '@lodev09/react-native-true-sheet/navigation';

const Sheet = createTrueSheetNavigator();

function App() {
  return (
    <NavigationContainer>
      <Sheet.Navigator>
        {/* Base screen (first screen is the default) */}
        <Sheet.Screen name="Main" component={MainScreen} />
        {/* Sheet screens */}
        <Sheet.Screen
          name="Details"
          component={DetailsSheet}
          options={{ detents: ['auto', 1], cornerRadius: 16 }}
        />
      </Sheet.Navigator>
    </NavigationContainer>
  );
}
```

### Wrapping Existing Navigation

Wrap your root navigator to present sheets from anywhere:

```tsx
const Stack = createNativeStackNavigator();
const Sheet = createTrueSheetNavigator();

function RootStack() {
  return (
    <Stack.Navigator>
      <Stack.Screen name="Home" component={HomeScreen} />
      <Stack.Screen name="Profile" component={ProfileScreen} />
    </Stack.Navigator>
  );
}

function App() {
  return (
    <NavigationContainer>
      <Sheet.Navigator>
        <Sheet.Screen name="Root" component={RootStack} />
        <Sheet.Screen
          name="Details"
          component={DetailsSheet}
          options={{ detents: ['auto', 1], cornerRadius: 16 }}
        />
      </Sheet.Navigator>
    </NavigationContainer>
  );
}
```

### Navigation & Resizing

```tsx
function DetailsSheet() {
  const navigation = useTrueSheetNavigation();

  return (
    <View>
      <Button title="Expand" onPress={() => navigation.resize(1)} />
      <Button title="Close" onPress={() => navigation.goBack()} />
    </View>
  );
}
```

### Screen Options

All [TrueSheet props](/reference/configuration) are available as screen options, plus the following navigation-specific options:

| Option | Type | Description |
|--------|------|-------------|
| `detentIndex` | `number` | The detent index to present at. Defaults to `0`. |
| `reanimated` | `boolean` | Enable worklet-based position events for this screen. |
| `positionChangeHandler` | `function` | A callback that receives position change events. When `reanimated` is enabled, this must be a worklet function. |

### Reanimated Integration

Enable worklet-based position events for smooth UI thread animations:

```tsx
// In your navigator
<Sheet.Screen
  name="Details"
  component={DetailsSheet}
  options={{
    reanimated: true,
    positionChangeHandler: (payload) => {
      'worklet';
      // Access payload.position, payload.detentIndex, etc.
      console.log(payload.position);
    },
  }}
/>
```

:::note
When `reanimated: true` is set, `react-native-reanimated` must be installed and `positionChangeHandler` must be a worklet function. The integration is lazy-loaded, so screens without `reanimated: true` don't require reanimated.
:::

### Dynamic Header & Footer

Use [`navigation.setOptions()`](https://reactnavigation.org/docs/navigation-object/#setoptions) to set or update `header` and `footer` from within a sheet screen. This is useful when you need access to navigation state or sheet events.

```tsx
function DetailsSheet() {
  const navigation = useTrueSheetNavigation();
  const [detentIndex, setDetentIndex] = useState(0);

  useEffect(() => {
    const unsubscribe = navigation.addListener('sheetDetentChange', (e) => {
      setDetentIndex(e.data.index);
    });
    return unsubscribe;
  }, [navigation]);

  useEffect(() => {
    navigation.setOptions({
      footer: (
        <View style={{ padding: 16 }}>
          {detentIndex > 0 && <Button title="Collapse" onPress={() => navigation.resize(0)} />}
          <Button title="Close" onPress={() => navigation.goBack()} />
        </View>
      ),
    });
  }, [navigation, detentIndex]);

  return <View>{/* ... */}</View>;
}
```

:::tip
All [TrueSheet props](/reference/configuration) like `header`, `footer`, `grabber`, `dismissible`, etc. can be dynamically updated via `setOptions`.
:::

### Screen Listeners

Use `screenListeners` on the navigator or `listeners` on individual screens:

```tsx
<Sheet.Navigator
  screenListeners={{
    sheetDidPresent: (e) => console.log('Presented:', e.data.index),
    sheetDidDismiss: () => console.log('Dismissed'),
  }}
>
```

Or use `addListener` within a screen component:

```tsx
function DetailsSheet() {
  const navigation = useTrueSheetNavigation();

  useEffect(() => {
    const unsubscribe = navigation.addListener('sheetDidPresent', (e) => {
      console.log('Presented:', e.data.index);
    });
    return unsubscribe;
  }, [navigation]);

  return <View>{/* ... */}</View>;
}
```

| Event | Description |
|-------|-------------|
| `sheetWillPresent` | Sheet is about to present |
| `sheetDidPresent` | Sheet finished presenting |
| `sheetWillDismiss` | Sheet is about to dismiss |
| `sheetDidDismiss` | Sheet finished dismissing |
| `sheetDetentChange` | Detent changed |
| `sheetDragBegin` | User started dragging |
| `sheetDragChange` | User is dragging |
| `sheetDragEnd` | User stopped dragging |
| `sheetPositionChange` | Position changed |

See [Lifecycle Events](/reference/events) for more details.

### Expo Router

TrueSheet works with Expo Router using `withLayoutContext`.

```
app/
├── _layout.tsx          # TrueSheet navigator
├── index.tsx            # Base content
└── details.tsx          # Sheet screen
```

```tsx
// app/_layout.tsx
import { withLayoutContext } from 'expo-router';
import {
  createTrueSheetNavigator,
  type TrueSheetNavigationEventMap,
  type TrueSheetNavigationOptions,
  type TrueSheetNavigationState,
} from '@lodev09/react-native-true-sheet/navigation';
import type { ParamListBase } from '@react-navigation/native';

const { Navigator } = createTrueSheetNavigator();

const Sheet = withLayoutContext<
  TrueSheetNavigationOptions,
  typeof Navigator,
  TrueSheetNavigationState<ParamListBase>,
  TrueSheetNavigationEventMap
>(Navigator);

export default function SheetLayout() {
  return (
    <Sheet>
      <Sheet.Screen name="index" />
      <Sheet.Screen
        name="details"
        options={{
          detents: ['auto', 1],
          cornerRadius: 16,
        }}
      />
    </Sheet>
  );
}
```

See [Expo Router docs](https://docs.expo.dev/router/introduction/) for more information.

## Navigating from Sheets

Navigate directly from sheets - they remain visible when presenting modals on top.

```tsx
// Navigate directly - no need to dismiss first!
navigation.navigate('SomeScreen')
```

:::note
Requires a [patch to react-native-screens](https://github.com/lodev09/react-native-true-sheet/blob/main/.yarn/patches/react-native-screens-npm-4.18.0-fa7de65975.patch). See [PR #3415](https://github.com/software-mansion/react-native-screens/pull/3415).
:::

### Web Limitation

On native platforms, TrueSheet automatically detects `react-native-screens` and handles sheet visibility when navigating. However, this detection is not supported on web.

As a workaround, use `useFocusEffect` to manually present/dismiss the sheet when the screen gains or loses focus:

```tsx
import { useFocusEffect } from '@react-navigation/native';

function DetailsSheet() {
  const sheet = useRef<TrueSheet>(null);

  useFocusEffect(
    useCallback(() => {
      sheet.current?.present();

      return () => {
        sheet.current?.dismiss();
      };
    }, [])
  );

  return <TrueSheet ref={sheet}>{/* ... */}</TrueSheet>;
}
